@@ -12,26 +12,31 @@ import zoo.exception.GondozooNotAvailable;
 import zoo.exception.ZooEmployeeException;
 import zoo.task.CleanerTask;
 import zoo.task.GondoZooTask;
-import zoo.ticket.Booking;
 import zoo.ticket.BookingThread;
 
-import java.lang.reflect.InvocationTargetException;
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
 
 public class Main {
 
-	public static void main(String[] args) throws ClassNotFoundException, NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
+	public static void main(String[] args) {
 
 		//a
 		Zoo zoo = new Zoo();
 
 		//b
-		Employee e1 = new Director("Igazgato Peter", LocalDate.of(1976, 1, 8), Sex.MALE, LocalDate.now());
+		Employee e1 = new Director(
+				"Igazgato Peter",
+				LocalDate.of(1976, 1, 8),
+				Sex.MALE,
+				LocalDate.now());
+
 		zoo.addEmployee(e1);
 
 		//c
 		Animal a1 = new Animal(AnimalType.RHINO, "Rino", LocalDate.of(2018, 11, 22), Sex.MALE);
+
 		try {
 			zoo.addAnimal(a1);
 		} catch (GondozooNotAvailable e) {
@@ -41,7 +46,12 @@ public class Main {
 		}
 
 		//d
-		Employee e2 = new GondoZoo("Gondozo Meg", LocalDate.of(1976, 1, 8), Sex.FEMALE, Arrays.asList(AnimalType.RHINO), LocalDate.of(2010, 01, 01));
+		Employee e2 = new GondoZoo(
+				"Gondozo Meg",
+				LocalDate.of(1976, 1, 8), Sex.FEMALE,
+				List.of(AnimalType.RHINO),
+				LocalDate.of(2010, 4, 1));
+
 		zoo.addEmployee(e2);
 
 		//e
@@ -52,19 +62,31 @@ public class Main {
 		}
 
 		//f
-		Employee e3 = new Director("Igazgato Lois", LocalDate.of(1978, 6, 8), Sex.FEMALE, LocalDate.of(2010, 01, 01));
+		Employee e3 = new Director(
+				"Igazgato Lois",
+				LocalDate.of(1978, 6, 8),
+				Sex.FEMALE,
+				LocalDate.of(2010, 11, 6));
+
 		zoo.addEmployee(e3);
 
 		//g
-		Employee e4 = new GondoZoo("Gondozoo Chris", LocalDate.of(1976, 1, 8), Sex.MALE, Arrays.asList(AnimalType.ELEPHANT),LocalDate.now());
+		Employee e4 = new GondoZoo(
+				"Gondozoo Chris",
+				LocalDate.of(1976, 1, 8),
+				Sex.MALE,
+				List.of(AnimalType.ELEPHANT),
+				LocalDate.now());
+
 		zoo.addEmployee(e4);
 
 		//h
 		Animal a2 = new Animal(AnimalType.ELEPHANT, "Eli", LocalDate.of(2008, 3, 4), Sex.FEMALE);
+
 		try {
 			zoo.addAnimal(a2);
 		} catch (GondozooNotAvailable e) {
-			e.getMessage();
+			System.out.println(e.getMessage());
 		}
 
 		//i
@@ -79,32 +101,54 @@ public class Main {
 		Employee e5 = new Cleaner("Cleaner Brian",
 					   LocalDate.of(1978, 12, 11),
 					   Sex.MALE,
-					   Arrays.asList(CleaningArea.TERRARIUM, CleaningArea.KIFUTO),
+					   Arrays.asList(Cleaner.CleaningArea.TERRARIUM, Cleaner.CleaningArea.KIFUTO),
 					   LocalDate.of(2005,11,10));
 		zoo.addEmployee(e5);
 
 //		b)
 		Employee e6 = new Cleaner("Cleaner Stewie",
-					   LocalDate.of(2009, 02, 05),
+					   LocalDate.of(2009, 2, 5),
 					   Sex.MALE,
-					   Arrays.asList(CleaningArea.KETREC, CleaningArea.MEDENCE),
+					   Arrays.asList(Cleaner.CleaningArea.KETREC, Cleaner.CleaningArea.MEDENCE),
 					   LocalDate.now());
 		zoo.addEmployee(e6);
 
 //		c)
-		zoo.addCompletedTask(e5, new CleanerTask(CleaningArea.KIFUTO));
-		zoo.addCompletedTask(e5, new CleanerTask(CleaningArea.TERRARIUM));
+		zoo.addCompletedTask(e5, new CleanerTask(Cleaner.CleaningArea.TERRARIUM));
+		zoo.addCompletedTask(e5, new CleanerTask(Cleaner.CleaningArea.TERRARIUM));
 		zoo.addCompletedTask(e2, new GondoZooTask(AnimalType.RHINO));
 
 //		d)
 		zoo.showCompletedTasks();
 
 //		3.feladat 3.rész
-		DetailAnimal descriptionMammal = new DetailAnimal("Europe", false, 28, 4, DetailAnimal.BasicAnimalClass.MAMMAL);
-		DetailAnimal descriptionReptile = new DetailAnimal("Europe", true, 50, 4, DetailAnimal.BasicAnimalClass.REPTILE);
-		DetailAnimal descriptionBird = new DetailAnimal("Australia", false, 7, 2, DetailAnimal.BasicAnimalClass.BIRD);
-		DetailAnimal descriptionFish = new DetailAnimal("Africa", true, 6, 0, DetailAnimal.BasicAnimalClass.FISH);
+		DetailAnimal descriptionMammal = new DetailAnimal(
+				"Europe",
+				false,
+				28,
+				4,
+				DetailAnimal.BasicAnimalClass.MAMMAL);
 
+		DetailAnimal descriptionReptile = new DetailAnimal(
+				"Europe",
+				true,
+				50,
+				4,
+				DetailAnimal.BasicAnimalClass.REPTILE);
+
+		DetailAnimal descriptionBird = new DetailAnimal(
+				"Australia",
+				false,
+				7,
+				2,
+				DetailAnimal.BasicAnimalClass.BIRD);
+
+		DetailAnimal descriptionFish = new DetailAnimal(
+				"Africa",
+				true,
+				6,
+				0,
+				DetailAnimal.BasicAnimalClass.FISH);
 
 
 		VisitablePlace<DetailAnimal> visitablePlace1 = new VisitablePlace<>(
@@ -113,7 +157,7 @@ public class Main {
 				new Coordinate(112.242,1521.224),
 				descriptionMammal
 		);
-		visitablePlace1.setAnimals(Arrays.asList(a1));
+		visitablePlace1.setAnimals(List.of(a1));
 
 		zoo.addVisitablePlace(visitablePlace1);
 
@@ -123,16 +167,15 @@ public class Main {
 				new Coordinate(453.242,6521.224),
 				descriptionMammal
 		);
-		visitablePlace2.setAnimals(Arrays.asList(a2));
+		visitablePlace2.setAnimals(List.of(a2));
 
 		zoo.addVisitablePlace(visitablePlace2);
 
-
 		Employee tempEmployee = new GondoZoo(
 				"Nem itt dolgozó",
-				LocalDate.of(1993,12,07),
+				LocalDate.of(1993,12,7),
 				Sex.MALE,
-				Arrays.asList(AnimalType.EAGLE),
+				List.of(AnimalType.EAGLE),
 				LocalDate.now());
 
 		VisitablePlace<DetailAnimal> visitablePlace3 = new VisitablePlace<>(
@@ -145,7 +188,6 @@ public class Main {
 		//Error
 		//zoo.addVisitablePlace(visitablePlace3);
 
-
 		VisitablePlace<DetailAnimal> visitablePlace4 = new VisitablePlace<>(
 				AnimalType.LION,
 				e2,
@@ -155,8 +197,6 @@ public class Main {
 
 		//Error
 		//zoo.addVisitablePlace(visitablePlace4);
-
-
 
 		zoo.showSpecificAnimalsByType(AnimalType.ELEPHANT);
 
@@ -226,20 +266,14 @@ public class Main {
 		zoo3.getEmployeeManager().showCleaners();
 
 		try {
-
-			BookingThread.runOneThread(zoo3);
-			BookingThread.runTwoThread(zoo3);
+//			BookingThread.runOneThread(zoo3);
+//			BookingThread.runTwoThread(zoo3);
 
 			BookingThread.runExecutor(zoo3, 1);
-			//BookingThread.runExecutor(zoo3, 2);
-			//BookingThread.runExecutor(zoo3, 4);
+			BookingThread.runExecutor(zoo3, 2);
+			BookingThread.runExecutor(zoo3, 4);
 		} catch (InterruptedException e) {
 			e.printStackTrace();
 		}
-//
-////		Class<?> animalClass = Class.forName("zoo.animal.Animal");
-////		Animal animal = (Animal) animalClass.getDeclaredConstructor().newInstance();
-
-
 	}
 }
